--- a/cypress/package.json
+++ b/cypress/package.json
@@ -25,6 +25,7 @@
     "nonGlobalStepDefinitions": true
   },
   "overrides": {
-    "form-data": "4.0.4"
+    "form-data": "4.0.4",
+    "tmp": "^0.2.4"
   }
 }
