--- a/frontend/package.json
+++ b/frontend/package.json
@@ -104,7 +104,7 @@
     "unplugin-icons": "^22.1.0",
     "unplugin-vue-components": "^29.0.0",
     "vite": "^7.0.0",
-    "vite-plugin-istanbul": "^5.0.0",
+    "vite-plugin-istanbul": "^7.2.0",
     "vitest": "^3.0.5",
     "vue-component-type-helpers": "^3.0.0",
     "vue-eslint-parser": "^9.4.3",
@@ -119,5 +119,8 @@
   "nyc": {
     "check-coverage": true,
     "lines": 40
+  },
+  "engines": {
+    "node": ">=22.12.0"
   }
 }
