allow users to update client's ID in some situations

--- a/frontend/stub/__files/response-clients-details-I-id-unknown.json
+++ b/frontend/stub/__files/response-clients-details-I-id-unknown.json
@@ -6,9 +6,9 @@
     "clientName": "Silver",
     "legalFirstName": "John",
     "legalMiddleName": "",
-    "birthdate": "",
-    "clientIdTypeCode": "BCDL",
-    "clientIdTypeDesc": "British Columbia Driver's Licence",
+    "birthdate": "1952-08-17T00:00",
+    "clientIdTypeCode": "UNKN",
+    "clientIdTypeDesc": "Unknown",
     "clientIdentification": "",
     "clientAcronym": null,
     "clientTypeCode": "I",
