--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,7 @@
     "js",
     "devops"
   ],
-  "author": "Maria Martinez, Paulo Cruz, and Fernando Terra",
+  "author": "Maria Martinez, Paulo Cruz, and Fernando Terra.",
   "license": "UNLICENSED",
   "bugs": {
     "url": "https://github.com/bcgov/nr-forest-client/issues"
