--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,7 @@
     "js",
     "devops"
   ],
-  "author": "Maria Martinez, Paulo Cruz, and Bruno Marchi",
+  "author": "Maria Martinez, Paulo Cruz, and Fernando Terra.",
   "license": "UNLICENSED",
   "bugs": {
     "url": "https://github.com/bcgov/nr-forest-client/issues"
@@ -117,13 +117,11 @@
   },
   "overrides": {
     "follow-redirects@<1.15.6": "1.15.6",
-    "tmp": "^0.2.4"
+    "tmp": "^0.2.4",
+    "js-yaml": "^4.1.1"
   },
   "nyc": {
     "check-coverage": true,
     "lines": 40
-  },
-  "engines": {
-    "node": ">=22.12.0"
   }
 }
