--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -30,7 +30,7 @@ spring:
     baseline-on-migrate: true
     user: ${ca.bc.gov.nrs.postgres.username}
     password: ${ca.bc.gov.nrs.postgres.password}
-    url: jdbc:postgresql://${ca.bc.gov.nrs.postgres.host}/${ca.bc.gov.nrs.postgres.database}
+    url: jdbc:postgresql://${ca.bc.gov.nrs.postgres.host}/${ca.bc.gov.nrs.postgres.database}?ssl=${POSTGRES_SSL:true}&sslmode=${POSTGRES_SSLMODE:verify-full}
   http:
     encoding:
       charset: UTF-8
