--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -618,7 +618,7 @@
                     <skip>${checkstyle.skip}</skip>
                     <configLocation>google_checks.xml</configLocation>
                     <consoleOutput>true</consoleOutput>
-                    <failsOnError>true</failsOnError>
+                    <failsOnError>false</failsOnError>
                     <linkXRef>false</linkXRef>
                 </configuration>
                 <executions>
