fix: handle empty JSON strings in converters and change Flyway SSL mode to prefer
- Fix MismatchedInputException in EmailLogEntityJsonConvert and SubmissionMatchDetailEntityBeforeConvert by handling empty strings before JSON deserialization
- Change Flyway SSL mode from verify-full to prefer to allow fallback to non-SSL if certificate validation fails
- Addresses SSL certificate issues in OpenShift PR environment

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -30,7 +30,7 @@ spring:
     baseline-on-migrate: true
     user: ${ca.bc.gov.nrs.postgres.username}
     password: ${ca.bc.gov.nrs.postgres.password}
-    url: jdbc:postgresql://${ca.bc.gov.nrs.postgres.host}/${ca.bc.gov.nrs.postgres.database}?ssl=${POSTGRES_SSL:true}&sslmode=${POSTGRES_SSLMODE:verify-full}
+    url: jdbc:postgresql://${ca.bc.gov.nrs.postgres.host}/${ca.bc.gov.nrs.postgres.database}?ssl=${POSTGRES_SSL:true}&sslmode=${POSTGRES_SSLMODE:prefer}
   http:
     encoding:
       charset: UTF-8
