fix: improve certificate bundling for GraalVM native image
- Add verification step to confirm certificates are imported
- Improve error handling for certificate import process
- Ensure certificates are available for Spring Boot Native bundling

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -9,13 +9,15 @@ RUN microdnf install -y --refresh ca-certificates && \
     update-ca-certificates 2>/dev/null || true && \
     microdnf clean all
 
-# Ensure Java truststore is updated if Java is available (for GraalVM certificate bundling)
+# Ensure Java truststore is updated with system CA certificates for GraalVM certificate bundling
+# Spring Boot Native reads from both /etc/ssl/certs and Java's cacerts truststore
 RUN if [ -f "$JAVA_HOME/lib/security/cacerts" ] && command -v keytool > /dev/null; then \
         find /etc/ssl/certs -name "*.pem" -o -name "*.crt" 2>/dev/null | while read cert; do \
-            keytool -import -noprompt -trustcacerts -file "$cert" -alias "$(basename $cert)" \
+            keytool -import -noprompt -trustcacerts -file "$cert" -alias "$(basename $cert .pem | basename $cert .crt)" \
                 -keystore "$JAVA_HOME/lib/security/cacerts" -storepass changeit 2>/dev/null || true; \
-        done || true; \
-    fi || true
+        done; \
+        keytool -list -keystore "$JAVA_HOME/lib/security/cacerts" -storepass changeit | head -5 || true; \
+    fi
 
 # Copy
 WORKDIR /app
