fix: add SSL configuration to R2DBC connection URL
- Add ssl and sslMode parameters to R2DBC URL for consistency with Flyway
- Use same environment variables (POSTGRES_SSL and POSTGRES_SSLMODE) as Flyway
- R2DBC uses camelCase sslMode parameter (vs lowercase sslmode for JDBC)
- Addresses Copilot AI feedback for SSL configuration consistency

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
         jwt:
           jwk-set-uri: ${JWK_SET_URI:https://cognito-idp.${ca.bc.gov.nrs.security.region}.amazonaws.com/${ca.bc.gov.nrs.security.user-pool}/.well-known/jwks.json}
   r2dbc:
-    url: r2dbc:postgresql://${ca.bc.gov.nrs.postgres.host}/${ca.bc.gov.nrs.postgres.database}
+    url: r2dbc:postgresql://${ca.bc.gov.nrs.postgres.host}/${ca.bc.gov.nrs.postgres.database}?ssl=${POSTGRES_SSL:true}&sslMode=${POSTGRES_SSLMODE:prefer}
     username: ${ca.bc.gov.nrs.postgres.username}
     password: ${ca.bc.gov.nrs.postgres.password}
     pool:
