Refactor Canada Post cert injection in deployment workflow
Moves Canada Post certificate secret and mount path injection to a template parameter passed at deploy time, instead of patching the deployment post-deploy. Updates the backend deployment template to mark the secret mount as optional, improving deployment flexibility and reliability.

--- a/backend/openshift.deploy.yml
+++ b/backend/openshift.deploy.yml
@@ -93,6 +93,7 @@ objects:
             - name: canadapost-cert
               secret:
                 secretName: ${CANADAPOST_CERT_SECRET}
+                optional: true
           containers:
             - image: ${REGISTRY}/${ORG}/${NAME}/${COMPONENT}:${TAG}
               imagePullPolicy: Always
