--- a/.github/workflows/.deploy.yml
+++ b/.github/workflows/.deploy.yml
@@ -125,6 +125,7 @@ jobs:
             parameters:
               -p FRONTEND_URL=${{ inputs.url }}
               -p CONFIG_MAP="${{ inputs.configmap-backend }}"
+              # CANADAPOST params are injected conditionally via the build-params step below
             verification_path: health
           - name: frontend
             parameters:
@@ -156,24 +157,19 @@ jobs:
           SECRET_NAME="${{ github.event.repository.name }}-${{ inputs.target }}-canadapost-cert"
           oc create secret generic "$SECRET_NAME" --from-file=canadapost.pem --dry-run=client -o yaml | oc apply -f -
 
-      - name: Patch backend deployment to mount cert and set env var (if secret created)
-        if: matrix.name == 'backend' && secrets.ADDRESS_COMPLETE_PEM != ''
-        env:
-          OC_SERVER: ${{ secrets.oc_server }}
-          OC_TOKEN: ${{ secrets.oc_token }}
-          OC_NAMESPACE: ${{ secrets.oc_namespace }}
+      - name: Build extra template parameters for backend
+        if: matrix.name == 'backend'
+        id: build-params
         run: |
-          set -euo pipefail
-          DEPLOYMENT_NAME="${{ github.event.repository.name }}-${{ inputs.target }}-backend"
-          SECRET_NAME="${{ github.event.repository.name }}-${{ inputs.target }}-canadapost-cert"
-          oc login "$OC_SERVER" --token="$OC_TOKEN" --insecure-skip-tls-verify=true
-          oc project "$OC_NAMESPACE"
-          # Add secret as a volume on the Deployment (ignore errors if already present)
-          oc set volume deployment/"$DEPLOYMENT_NAME" --add --name=canadapost-cert --secret-name="$SECRET_NAME" --mount-path=/etc/ssl/certs/canadapost || true
-          # Configure the application env var expected by the code to point to the mounted PEM file
-          oc set env deployment/"$DEPLOYMENT_NAME" CA_BC_GOV_NRS_ADDRESSCOMPLETE_TRUSTCERTPATH=/etc/ssl/certs/canadapost/canadapost.pem
-          # Restart to pick up the changes
-          oc rollout restart deployment/"$DEPLOYMENT_NAME"
+          if [ "${{ secrets.ADDRESS_COMPLETE_PEM }}" != "" ]; then
+            echo "extra=-p CANADAPOST_CERT_SECRET=${{ github.event.repository.name }}-${{ inputs.target }}-canadapost-cert -p CANADAPOST_CERT_MOUNT_PATH=/etc/ssl/certs/canadapost" >> $GITHUB_OUTPUT
+          else
+            echo "extra=" >> $GITHUB_OUTPUT
+          fi
+
+      # Note: Deployment will be created with the cert mount via the template parameter
+      # (CANADAPOST_CERT_SECRET) passed below to the deployer action. Do not patch after deployer
+      # runs because the deployer rewrites the deployment from the template.
 
       - uses: bcgov/action-deployer-openshift@d972993c70aba88e4f2fe66a66c4b7149fa9fcad # v4.0.0
         id: deploys
@@ -187,6 +183,7 @@ jobs:
             -p TAG=${{ needs.vars.outputs.tag }}
             -p ZONE=${{ inputs.target }}
             ${{ matrix.parameters }}
+            ${{ steps.build-params.outputs.extra }}
 
   database-dev-job:
     name: Database Dev Job
