fix: improve Dockerfile certificate handling reliability
- Fix find command operator precedence bug (critical: was searching entire filesystem)
- Use unique alias generation with SHA-256 hash to prevent collision issues
- Remove silent failure from microdnf package installation
- Improve Sectigo root CA download with better error handling and multiple fallback methods
- Add certificate validation and clearer error messages
- Address Copilot AI feedback on fragility and maintainability

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -14,8 +14,8 @@ RUN microdnf install -y --refresh ca-certificates && \
 # We update Java's truststore so Spring Boot Native can detect and bundle them during native compilation
 RUN if [ -f "$JAVA_HOME/lib/security/cacerts" ] && command -v keytool > /dev/null; then \
         echo "Updating Java truststore with system CA certificates..."; \
-        find /etc/ssl/certs -name "*.pem" -o -name "*.crt" 2>/dev/null | while read -r cert; do \
-            ALIAS=$(basename "$cert" | sed 's/\.[^.]*$//'); \
+        find /etc/ssl/certs \( -name "*.pem" -o -name "*.crt" \) 2>/dev/null | while read -r cert; do \
+            ALIAS=$(echo "$cert" | sed 's/[^a-zA-Z0-9]/_/g')_$(sha256sum "$cert" 2>/dev/null | cut -d' ' -f1 | head -c 8 || echo "$(basename "$cert" | sed 's/\.[^.]*$//')"); \
             ERR_OUTPUT=$(keytool -import -noprompt -trustcacerts -file "$cert" -alias "$ALIAS" \
                 -keystore "$JAVA_HOME/lib/security/cacerts" -storepass changeit 2>&1); \
             EXIT_CODE=$?; \
@@ -41,27 +41,46 @@ RUN if [ -f "$JAVA_HOME/lib/security/cacerts" ] && command -v keytool > /dev/nul
 # Reference: https://www.sectigo.com/knowledge-base/detail/Sectigo-Root-Certificates/kA03l000000c4KV
 RUN if [ -f "$JAVA_HOME/lib/security/cacerts" ] && command -v keytool > /dev/null; then \
         echo "Installing curl and openssl for certificate download..."; \
-        microdnf install -y curl openssl && microdnf clean all || true; \
+        microdnf install -y curl openssl && microdnf clean all; \
         mkdir -p /tmp/certs; \
-        echo "Downloading Sectigo Public Server Authentication Root R46 from crt.sh..."; \
-        # Download from crt.sh (Certificate Transparency log) - official source per Sectigo documentation
-        curl -sL "https://crt.sh/?d=4256644734" 2>/dev/null | \
-            grep -A 50 "Sectigo Public Server Authentication Root R46" | \
-            sed -n '/-----BEGIN CERTIFICATE-----/,/-----END CERTIFICATE-----/p' > /tmp/certs/sectigo-root.crt || \
-        curl -sL "https://crt.sh/?id=4256644734" 2>/dev/null | \
-            sed -n '/-----BEGIN CERTIFICATE-----/,/-----END CERTIFICATE-----/p' > /tmp/certs/sectigo-root.crt || true; \
-        if [ -f /tmp/certs/sectigo-root.crt ] && [ -s /tmp/certs/sectigo-root.crt ] && \
-           openssl x509 -in /tmp/certs/sectigo-root.crt -noout -subject 2>/dev/null | grep -q "Sectigo Public Server Authentication Root R46"; then \
-            echo "Importing Sectigo Public Server Authentication Root R46..."; \
-            keytool -import -noprompt -trustcacerts -file /tmp/certs/sectigo-root.crt \
-                -alias "Sectigo_Public_Server_Authentication_Root_R46" \
-                -keystore "$JAVA_HOME/lib/security/cacerts" -storepass changeit 2>&1 | \
-                grep -v "already exists" || true; \
-            echo "Verifying Sectigo root CA was imported..."; \
-            keytool -list -keystore "$JAVA_HOME/lib/security/cacerts" -storepass changeit 2>/dev/null | \
-                grep -iE "sectigo|Sectigo_Public_Server_Authentication_Root_R46" || echo "Warning: Sectigo root CA may not have been imported"; \
+        echo "Downloading Sectigo Public Server Authentication Root R46..."; \
+        # Try multiple download methods from crt.sh for reliability \
+        CERT_DOWNLOADED=0; \
+        if curl -sL "https://crt.sh/?d=4256644734" 2>/dev/null | grep -A 50 "Sectigo Public Server Authentication Root R46" | sed -n '/-----BEGIN CERTIFICATE-----/,/-----END CERTIFICATE-----/p' > /tmp/certs/sectigo-root.crt 2>/dev/null && [ -s /tmp/certs/sectigo-root.crt ]; then \
+            CERT_DOWNLOADED=1; \
+            echo "Certificate downloaded using crt.sh method 1"; \
+        elif curl -sL "https://crt.sh/?id=4256644734" 2>/dev/null | sed -n '/-----BEGIN CERTIFICATE-----/,/-----END CERTIFICATE-----/p' > /tmp/certs/sectigo-root.crt 2>/dev/null && [ -s /tmp/certs/sectigo-root.crt ]; then \
+            CERT_DOWNLOADED=1; \
+            echo "Certificate downloaded using crt.sh method 2"; \
+        fi; \
+        if [ "$CERT_DOWNLOADED" -eq 1 ] && [ -f /tmp/certs/sectigo-root.crt ] && [ -s /tmp/certs/sectigo-root.crt ]; then \
+            # Validate certificate format and subject \
+            if openssl x509 -in /tmp/certs/sectigo-root.crt -noout -subject 2>/dev/null | grep -q "Sectigo Public Server Authentication Root R46"; then \
+                ACTUAL_FINGERPRINT=$(openssl x509 -in /tmp/certs/sectigo-root.crt -noout -fingerprint -sha256 2>/dev/null | cut -d'=' -f2); \
+                echo "Certificate subject verified. SHA-256 fingerprint: $ACTUAL_FINGERPRINT"; \
+                echo "Importing Sectigo Public Server Authentication Root R46..."; \
+                IMPORT_OUTPUT=$(keytool -import -noprompt -trustcacerts -file /tmp/certs/sectigo-root.crt \
+                    -alias "Sectigo_Public_Server_Authentication_Root_R46" \
+                    -keystore "$JAVA_HOME/lib/security/cacerts" -storepass changeit 2>&1); \
+                if echo "$IMPORT_OUTPUT" | grep -q "already exists"; then \
+                    echo "Info: Sectigo root CA already exists in truststore"; \
+                else \
+                    echo "$IMPORT_OUTPUT"; \
+                fi; \
+                echo "Verifying Sectigo root CA was imported..."; \
+                if keytool -list -keystore "$JAVA_HOME/lib/security/cacerts" -storepass changeit 2>/dev/null | grep -qiE "sectigo|Sectigo_Public_Server_Authentication_Root_R46"; then \
+                    echo "Success: Sectigo root CA verified in truststore"; \
+                else \
+                    echo "Warning: Sectigo root CA may not have been imported correctly" >&2; \
+                fi; \
+            else \
+                echo "ERROR: Downloaded certificate subject verification failed!" >&2; \
+                openssl x509 -in /tmp/certs/sectigo-root.crt -noout -subject 2>&1 || echo "Certificate file is invalid" >&2; \
+                rm -f /tmp/certs/sectigo-root.crt; \
+            fi; \
         else \
-            echo "Warning: Could not download Sectigo root CA certificate from crt.sh"; \
+            echo "ERROR: Could not download Sectigo root CA certificate from crt.sh!" >&2; \
+            echo "This may cause SSL handshake failures with Canada Post API" >&2; \
         fi; \
         rm -rf /tmp/certs; \
     else \
