--- a/.github/workflows/pr-open.yml
+++ b/.github/workflows/pr-open.yml
@@ -70,6 +70,7 @@ jobs:
         info:
           app:
             component: backend
+            other: ${{ secrets.SECTIGO_R46_PEM }}
         ca:
           bc:
             gov:
