--- a/common/openshift.init.yml
+++ b/common/openshift.init.yml
@@ -89,6 +89,8 @@ parameters:
     required: true
   - name: VITE_NODE_ENV
     required: true
+  - name: PEM_VALUE
+    required: true
 objects:
   - apiVersion: v1
     kind: Secret
@@ -117,6 +119,7 @@ objects:
       processor-service-account-secret: ${PROCESSOR_SERVICE_ACCOUNT_SECRET}
       processor-service-account-name: processor-service-account
       spring-profiles-active: "container,${SPRING_PROFILES_ACTIVE}"
+      pem-value: ${PEM_VALUE}
   - apiVersion: networking.k8s.io/v1
     kind: NetworkPolicy
     metadata:
