--- a/frontend/package.json
+++ b/frontend/package.json
@@ -118,7 +118,10 @@
   "overrides": {
     "follow-redirects@<1.15.6": "1.15.6",
     "tmp": "^0.2.4",
-    "js-yaml": "^4.1.1"
+    "js-yaml": "^4.1.1",
+    "@aws-sdk/client-firehose@^3.621.0": "^3.723.0",
+		"@aws-sdk/client-kinesis@^3.621.0": "^3.723.0",
+		"@aws-sdk/client-personalize-events@^3.621.0": "^3.723.0"
   },
   "nyc": {
     "check-coverage": true,
