--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -1,1 +1,14 @@
-{}
+{
+	"compilerOptions": {
+		"target": "ES2020",
+		"module": "commonjs",
+		"lib": ["es2020", "dom"],
+		"esModuleInterop": true,
+		"allowSyntheticDefaultImports": true,
+		"strict": false,
+		"types": ["cypress"]
+	},
+	"include": [
+		"**/*.ts"
+	]
+}
