--- a/cypress/package.json
+++ b/cypress/package.json
@@ -16,6 +16,7 @@
     "@badeball/cypress-cucumber-preprocessor": "^24.0.0",
     "@bahmutov/cypress-esbuild-preprocessor": "^2.2.0",
     "@cypress/webpack-preprocessor": "^7.0.0",
+    "cypress-on-fix": "^1.1.0",
     "cypress": "^15.0.0",
     "ts-loader": "^9.4.2",
     "typescript": "^5.0.4",
