ci: call scheduled workflow from merge pipeline

--- a/.github/workflows/scheduled.yml
+++ b/.github/workflows/scheduled.yml
@@ -3,14 +3,13 @@ name: Scheduled
 on:
   schedule: [cron: "0 11 * * 6"] # 3 AM PST = 12 PM UDT, Saturdays
   workflow_dispatch:
+  workflow_call: {}
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
-permissions: 
-  pages: write
-  contents: read
+permissions: {}
 
 jobs:
   # https://github.com/bcgov/quickstart-openshift-helpers
