ci: grant reporting job permissions for reusable workflow

--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -48,6 +48,10 @@ jobs:
   reporting:
     name: SchemaSpy & ZAP
     needs: [deploy-test]
+    permissions:
+      contents: write
+      pages: write
+      issues: write
     secrets: inherit
     uses: ./.github/workflows/reporting.yml
 
