ci: allow reporting workflow permissions from merge, remove ZAP backend job (#2019)

--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -48,7 +48,10 @@ jobs:
   reporting:
     name: SchemaSpy & ZAP
     needs: [deploy-test]
-    secrets: inherit
+    permissions:
+      contents: write
+      pages: write
+      issues: write
     uses: ./.github/workflows/reporting.yml
 
   deploy-prod:
